criação da RV e implementação da lista fake para usuarios

--- a/app/src/main/res/layout/item_contato.xml
+++ b/app/src/main/res/layout/item_contato.xml
@@ -6,7 +6,11 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp"
+    android:clickable="true"
+    android:focusable="true"
     app:cardUseCompatPadding="true">
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,7 +22,6 @@
             android:layout_height="90dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
         <com.google.android.material.textview.MaterialTextView
